# MertricBoost

./: .env  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml  temp.ipynb  temp.py
app/controllers/: __init__.py  data_model.py  database.py  domain.py  metric.py  tag.py  topic.py
app/core/: crud.py
app/models/: utils.py
app/schemas/: data_model.py  database.py  domain.py  metric.py  tag.py  topic.py
app/settings/: config.py
backend/: .gitignore  pyproject.toml
backend/app/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/asset/: __init__.py  database.py  domain.py  model.py  tag.py
backend/app/api/v1/data_asset/: __init__.py  tag.py
backend/app/api/v1/metric/: __init__.py  metric.py
backend/app/api/v1/report/: __init__.py  report.py
backend/app/api/v1/service/: __init__.py  service_api.py  service_app.py
backend/app/api/v1/system_manage/: __init__.py  apis.py  logs.py  menus.py  roles.py  users.py
backend/app/controllers/: __init__.py  database.py  domain.py  metric.py  model.py  report.py  service_api.py  service_app.py  tag.py
backend/app/core/: crud.py  init_app.py  middlewares.py
backend/app/models/: utils.py
backend/app/models/asset/: __init__.py  database.py  domain.py  model.py  tag.py
backend/app/models/metric/: metric.py
backend/app/models/report/: report.py
backend/app/models/service/: __init__.py  api.py  app.py
backend/app/models/system/: __init__.py  admin.py
backend/app/schemas/: apis.py  base.py  data_model.py  database.py  domain.py  login.py  logs.py  menus.py  metric.py  report.py  roles.py  service_api.py  service_app.py  tag.py  users.py
backend/app/settings/: config.py
backend/tests/: conftest.py  test_report.py  test_service_api.py  test_service_app.py
docs/: 指标加速UI示意图.excalidraw
frontend/: .env  .env.prod  package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1744251633966-59ce6d036a33c.mjs  vite.config.ts.timestamp-1746693400101-f4701e005fb69.mjs
metricboost/: app.py  config.py  load_test_data.py  logger.py  main.py
metricboost/api/: routers.py
metricboost/controllers/: api.py  collect.py  database.py  domain.py  log.py  menu.py  metric.py  model.py  report.py  report_template.py  role.py  tag.py  user.py
metricboost/core/: crud.py  ctx.py  dependency.py  exceptions.py  init_app.py  middlewares.py  response.py  security.py
mysql/data/: ca.pem  (+25 more)
nginx/: default.conf
scripts/: init_postgrep.sql  setup.sh  start.bat
tests/: conftest.py
(+337 files in other folders)
